// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test InputLightbox 1`] = `
<Modal
  cancelText="Resolution"
  centered={true}
  okButtonProps={
    Object {
      "disabled": true,
    }
  }
  okText="UPLOAD"
  onCancel={[Function]}
  onOk={[Function]}
  open={true}
  title="Firmware upload (*.bin / *.fxfw)"
>
  <ForwardRef(InternalForm)>
    <p />
    <InternalFormItem>
      <ForwardRef
        autoFocus={true}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="file"
      />
    </InternalFormItem>
  </ForwardRef(InternalForm)>
</Modal>
`;

exports[`test InputLightbox 2`] = `
<Modal
  cancelText="Resolution"
  centered={true}
  okButtonProps={
    Object {
      "disabled": true,
    }
  }
  okText="CONNECT"
  onCancel={[Function]}
  onOk={[Function]}
  open={true}
  title="ABCDE requires a password"
>
  <ForwardRef(InternalForm)>
    <p>
      Password
    </p>
    <InternalFormItem>
      <ForwardRef
        autoFocus={true}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="password"
      />
    </InternalFormItem>
  </ForwardRef(InternalForm)>
</Modal>
`;
